@@ -29,6 +29,8 @@ it from source control: http://www.mediawiki.org/wiki/Download_from_SVN
   instead of falling back to GD.
 * Added $wgRedirectOnLogin to allow specifying a specifc page to redirect users
   to upon logging in (ex: "Main Page")
+* Add $wgExportFromNamespaces for enabling/disabling the "export all from 
+  namespace" option (disabled by default)
 
 === New features in 1.15 ===
 
